--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,14 @@
-<p>
-  about works!
-</p>
+<div class="aside">
+  <img class="my-photo" src="./assets/images/my-photo.png" alt="I'm">
+  <h3 class="name">Kizilov Yuriy</h3>
+  <p class="desc">I am front-end developer from CraftGroup</p>
+  <!-- <h3 class="skills-title">My skills</h3> -->
+  <ul class="skills">
+    <li><img src="./assets/images/icons/html.png" alt=""><span>HTML</span></li>
+    <li><img src="./assets/images/icons/css.png" alt=""><span>CSS</span></li>
+    <li><img src="./assets/images/icons/js.png" alt=""><span>JS</span></li>
+    <li><img src="./assets/images/icons/angular.png" alt=""><span>Angular 5</span></li>
+    <li><img src="./assets/images/icons/firebase.png" alt=""><span>Firebase</span></li>
+    <li><img src="./assets/images/icons/rest.png" alt=""><span>REST API</span></li>
+  </ul>
+</div>
