--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,3 +1,11 @@
-<p>
-  article-list works!
-</p>
+<div class="content">
+  <h2>My hobby</h2>
+  <mat-paginator [length]="100"
+              [pageSize]="5">
+  </mat-paginator>
+  <app-article></app-article>
+  <app-article></app-article>
+  <app-article></app-article>
+  <app-article></app-article>
+  <app-article></app-article>
+</div>
