--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,3 +1,8 @@
-<p>
-  article works!
-</p>
+<mat-card class="article">
+  <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/68dd54ca-60cf-4ef7-898b-26d7cbe48ec7/10-dithering-opt.jpg" alt="" class="img">
+  <div class="wrap">
+      <h3 class="title">Title of article</h3>
+      <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis enim similique quaerat quidem et alias provident culpa distinctio? Magni, repudiandae sint, commodi exercitationem voluptatem in placeat officiis possimus repellat voluptas quae ex eveniet consectetur voluptatibus eligendi quos tenetur rem velit molestiae deserunt fuga? Cumque consequatur quidem repudiandae! Dolores aliquam obcaecati repellat dolore, expedita porro quaerat, consequatur nihil a magnam cumque adipisci sint laboriosam fugit veritatis optio recusandae nobis molestias, repellendus explicabo unde aliquid qui aut minus. Iure dolore ut totam laudantium, sequi assumenda, voluptas aliquid libero unde rem laboriosam deleniti quas consequatur amet placeat eum laborum nihil saepe quis delectus.</p>
+      <button mat-button color="primary" class="more-btn">More</button>
+  </div>
+</mat-card>
