--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,17 +1,5 @@
 
-<mat-sidenav-container>
-  <mat-sidenav #sidenav mode="over">
-    Sidenav content
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <header class="header">
-        <button mat-icon-button (click)="sidenav.toggle()">12</button>
-    </header>
-
-    <main>
-
-    </main>
-
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div class="wrap">
+    <app-about></app-about>
+    <app-article-list></app-article-list>
+</div>
