--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-<app-main-page></app-main-page>
+<mat-sidenav-container>
+    <mat-sidenav #sidenav mode="over">
+      Sidenav content
+    </mat-sidenav>
+  
+    <mat-sidenav-content>
+        <header class="header">
+            <button mat-icon-button (click)="sidenav.toggle()"><i class="material-icons">menu</i></button>
+        </header>
+        
+        <main class="container">
+            <router-outlet></router-outlet>
+        </main>
+
+        <footer>
+            <span>Design by Kizilov</span>
+        </footer>
+      
+    </mat-sidenav-content>
+</mat-sidenav-container>
