--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -1,26 +1,19 @@
-mat-sidenav {
-    width: 320px;
-}
-mat-sidenav-content {
+.wrap {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    min-height: 100vh;
+    justify-content: space-between
 }
-header {
-    padding: 8px 16px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    color: white;
-    background: #673ab7;
-    box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
-    z-index: 2;
+app-about {
+    flex-shrink: 0;
 }
-main {
-    flex-grow: 1;
+app-article-list {
+    width: calc(100% - 340px);
 }
-button {
-    position: relative;
-    z-index: 3;
+@media screen and (max-width: 1024px) {
+    .wrap {
+        flex-direction: column; 
+    }
+    app-article-list {
+        margin: 0 15px;
+        width: calc(100% - 30px);
+    }
 }
