--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,10 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 body {
     margin: 0;
+    font-family: 'Ubuntu Condensed', sans-serif;
+}
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 50px auto;
 }
