--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,11 +1,7 @@
 <div class="content">
   <h2>My hobby</h2>
-  <mat-paginator [length]="100"
+  <mat-paginator [length]="postsLength"
               [pageSize]="5">
   </mat-paginator>
-  <app-article></app-article>
-  <app-article></app-article>
-  <app-article></app-article>
-  <app-article></app-article>
-  <app-article></app-article>
+  <app-article *ngFor="let post of posts" [post]='post'></app-article>
 </div>
