--- a/src/app/components/article/article.component.css
+++ b/src/app/components/article/article.component.css
@@ -11,7 +11,7 @@ mat-card {
 .img {
     max-width: 300px;
     max-height: 205px;
-    height: 100%;
+    height: 210px;
     width: 100%;
     object-fit: cover;
 }
