--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,7 +1,5 @@
 <div class="content">
   <h2>My hobby</h2>
-  <mat-paginator [length]="postsLength"
-              [pageSize]="5">
-  </mat-paginator>
+  <mat-paginator [pageSize]="5"></mat-paginator>
   <app-article *ngFor="let post of posts" [post]='post'></app-article>
 </div>
